Fixed theme, favicon and logo

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,7 +38,7 @@ mat-sidenav-container {
 }
 
 .active-item {
-  background-color: #25992e !important;
+  background-color: #cd3e3e !important;
   border-radius: 4px;
 }
 
