--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     </button>
   </div>
   <div class="col-auto pointer h-100 d-flex align-items-center pr-0 unselectable" routerLink="/home" (click)="redirectToHome()">
-    <img src="../../assets/logo/nbu-classbook-white.png" alt="NBU Classbook Logo">
+    <img src="../../assets/logo/orange_logo_transparent.png" alt="NBU Medical Service Logo">
   </div>
   <div *ngIf="username" class="col name-text font-monsterrat h-100 white-color d-flex justify-content-end align-items-center pl-0">
     Hello, {{ username }}
