--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,7 +3,7 @@
   height: 6vh;
   min-height: 40px;
   font-size: 14px;
-  background-color: #25992e;
+  background-color: #cd3e3e;
   z-index: 1;
 
   img {
