Login/Register now work + fixes

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer>
-  <div class="row ml-0 mr-0 mt-2 justify-content-center">
+  <!-- TODO Fontawesome is not added so the icons won't show -->
+  <!-- <div class="row ml-0 mr-0 mt-2 justify-content-center">
     <div class="col-auto d-flex align-items-center">
       <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/">
         <i class="fab fa-facebook social-media-icons pointer"></i>
@@ -15,7 +16,7 @@
         <i class="fab fa-twitter social-media-icons pointer"></i>
       </a>
     </div>
-  </div>
+  </div> -->
   <div class="row m-0 my-2">
     <div class="col pr-0 pl-5 d-flex justify-content-center align-items-center">
       <div class="copyright-text ml-5"><span class="fs-18px">©</span> NBU Medical Service 2022-2023</div>
