--- a/src/styles.scss
+++ b/src/styles.scss
@@ -244,12 +244,12 @@ mat-sidenav {
   color: white;
 }
 
-.green-nbu-color {
+.red-nbu-color {
   color: #cd3e3e;
 }
 
-.dark-green-nbu-color {
-  color: #22802a;
+.dark-red-nbu-color {
+  color: #b90000;
 }
 
 .disabled-grey-color {
@@ -357,11 +357,11 @@ button {
   }
 }
 
-.green-button {
+.red-button {
   background-color: #62a420;
 }
 
-.green-nbu-button {
+.red-nbu-button {
   background-color: #cd3e3e;
 }
 
