--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,7 @@
             </mat-form-field>
           </div>
 
-          <button mat-raised-button class="w-100 green-nbu-button white-color text-uppercase lg-spaced-text login-button-text"
+          <button mat-raised-button class="w-100 red-nbu-button white-color text-uppercase lg-spaced-text login-button-text"
            [disabled]="!loginForm.valid" type="submit">
             Login
           </button>
