--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -17,7 +17,7 @@
               <mat-form-field class="w-100">
                 <mat-label>Name</mat-label>
                 <input matInput formControlName="name" required>
-                <mat-error>{{getRegisterFirstNameErrorMessage()}}</mat-error>
+                <mat-error>{{getRegisterNameErrorMessage()}}</mat-error>
               </mat-form-field>
             </div>
 
@@ -26,14 +26,6 @@
                 <mat-label>Username</mat-label>
                 <input matInput formControlName="username" required>
                 <mat-error>{{getRegisterUsernameErrorMessage()}}</mat-error>
-              </mat-form-field>
-            </div>
-
-            <div class="mb-3">
-              <mat-form-field class="w-100">
-                <mat-label>Email Address</mat-label>
-                <input type="email" matInput formControlName="email" required>
-                <mat-error>{{getRegisterEmailErrorMessage()}}</mat-error>
               </mat-form-field>
             </div>
   
@@ -76,21 +68,18 @@
             <div *ngIf="registerForm.controls.role.value === 'PATIENT'">
               <div class="mb-3">
                 <mat-form-field class="w-100">
-                  <mat-label>School</mat-label>
-                  <mat-select name="school" formControlName="school" required>
-                    <mat-option *ngFor="let school of schools" [value]="school">
-                      {{school.name}}
-                    </mat-option>
-                  </mat-select>
+                  <mat-label>Unique Citizen Number</mat-label>
+                  <input matInput name="uniqueUserNumber" formControlName="uniqueUserNumber" required>
+                  <mat-error>{{getRegisterUniqueNumberErrorMessage()}}</mat-error>
                 </mat-form-field>
               </div>
 
               <div class="mb-3">
                 <mat-form-field class="w-100">
-                  <mat-label>Class</mat-label>
-                  <mat-select name="class" formControlName="class" required>
-                    <mat-option *ngFor="let class of classes" [value]="class">
-                      {{class}}
+                  <mat-label>Select GP</mat-label>
+                  <mat-select name="gp" formControlName="gp" required>
+                    <mat-option *ngFor="let doctor of doctors" [value]="doctor">
+                      {{doctor.name}}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
@@ -100,17 +89,25 @@
             <div *ngIf="registerForm.controls.role.value === 'DOCTOR'">
               <div class="mb-3">
                 <mat-form-field class="w-100">
-                  <mat-label>School</mat-label>
-                  <mat-select name="school" formControlName="school" required>
-                    <mat-option *ngFor="let school of schools" [value]="school">
-                      {{school.name}}
+                  <mat-label>Unique Doctor Number</mat-label>
+                  <input matInput name="uniqueUserNumber" formControlName="uniqueUserNumber" required>
+                  <mat-error>{{getRegisterUniqueNumberErrorMessage()}}</mat-error>
+                </mat-form-field>
+              </div>
+
+              <div class="mb-3">
+                <mat-form-field class="w-100">
+                  <mat-label>Select Specialization</mat-label>
+                  <mat-select name="specialization" formControlName="specialization" required>
+                    <mat-option *ngFor="let specialization of specializations" [value]="specialization">
+                      {{specialization}}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
             </div>
   
-            <button mat-raised-button class="w-100 green-nbu-button white-color text-uppercase lg-spaced-text register-button-text"
+            <button mat-raised-button class="w-100 red-nbu-button white-color text-uppercase lg-spaced-text register-button-text"
              [disabled]="!registerForm.valid" type="submit">
               Register
             </button>
