--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -19,10 +19,16 @@
               Patient's name: {{ name }}
             </div>
             <div class="mb-3 fs-16">
-              <div *ngIf="healthTaxesPaidUntil !== 'undefined'">
-                Health taxes paid until: {{ healthTaxesPaidUntil | date }}
+              Patient's Unique Citizen Number: {{ uniqueCitizenNumber }}
+            </div>
+            <div class="mb-3 fs-16">
+              Patient's GP: {{ gpName }}
+            </div>
+            <div class="mb-3 fs-18 font-weight-bolder">
+              <div *ngIf="healthTaxesArePaid">
+                Health taxes are paid until: {{ healthTaxesPaidUntil | date }}
               </div>
-              <div *ngIf="healthTaxesPaidUntil === 'undefined'">
+              <div style="color: red;" *ngIf="!healthTaxesArePaid">
                 Health taxes aren't paid! Please pay them to use our services!
               </div>
             </div>
@@ -40,6 +46,9 @@
           <mat-card-content *ngIf="role === 'DOCTOR'">
             <div class="mb-3 fs-16">
               Doctor's name: {{ name }}
+            </div>
+            <div class="mb-3 fs-16">
+              Doctor's Unique Doctor Number: {{ uniqueDoctorNumber }}
             </div>
             <div *ngIf="doctorSpecializations" class="mb-3 fs-16">
               {{ doctorSpecializations.length == 1 ? 'Specialization: ' : doctorSpecializations.length > 1 ? 'Specializations: ' : '' }}
