--- a/src/app/visits/visits.component.html
+++ b/src/app/visits/visits.component.html
@@ -2,20 +2,27 @@
   Visits:
 </div>
 <!-- PATIENT VISITS -->
-<div class="row justify-content-center align-items-center" *ngIf="role === 'PATIENT' && healthTaxesArePaid">
-  <div class="col p-0">
-    <ag-grid-angular
-      style="width: 100%; height: 500px;"
-      class="ag-theme-alpine"
-      [rowData]="patientVisits"
-      [columnDefs]="patientCols"
-      [animateRows]="true"
-      [enableCellTextSelection]="true"
-      [frameworkComponents]="frameworkComponents">
-    </ag-grid-angular>
+<div *ngIf="role === 'PATIENT' && healthTaxesArePaid">
+  <div class="row mb-3">
+    <button mat-raised-button class="red-nbu-button white-color" (click)="createVisit()">
+      Create Visit
+    </button>
+  </div>
+  <div class="row justify-content-center align-items-center">
+    <div class="col p-0">
+      <ag-grid-angular
+        style="width: 100%; height: 500px;"
+        class="ag-theme-alpine"
+        [rowData]="patientVisits"
+        [columnDefs]="patientCols"
+        [animateRows]="true"
+        [enableCellTextSelection]="true"
+        [frameworkComponents]="frameworkComponents">
+      </ag-grid-angular>
+    </div>
   </div>
 </div>
-<div class="fs-20 font-weight-bolder" style="color: red;" *ngIf="role === 'PATIENT' && !healthTaxesArePaid">
+<div class="fs-20 font-weight-bolder" style="color: red;" *ngIf="role === 'PATIENT' && healthTaxesArePaid === false">
   Health taxes aren't paid! Please pay them to use our services!
 </div>
 
