--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -29,7 +29,7 @@
                 Health taxes are paid until: {{ healthTaxesPaidUntil | date }}
               </div>
               <div style="color: red;" *ngIf="!healthTaxesArePaid">
-                Health taxes aren't paid! Please pay them to use our services!
+                Health taxes aren't paid for the past 6 months! Please pay them to use our services!
               </div>
             </div>
             <mat-form-field class="mb-3">
